영진 수정 - 모바일 가사 클릭 수정

--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -1176,6 +1176,7 @@
 }
 
 @media screen and (max-width: 768px) {
+  
   .song-detail {
     .album-detail__title {
       dt {
@@ -1189,6 +1190,14 @@
           width: 100%;
           .album-detail__song-detail__left__img {
             height: 320px;
+            .album-detail__song-detail__left__img__txt{
+              height: 0;
+            }
+            &.active{
+              .album-detail__song-detail__left__img__txt{
+                height: 100%;
+              }
+            }
           }
         }
         .album-detail__song-detail__right {
