--- a/src/components/NftConfirmSuccessModal.scss
+++ b/src/components/NftConfirmSuccessModal.scss
@@ -1,6 +1,6 @@
 // 프리페어링
 
-.confirm-modal {
+.confirm-success-modal {
   width: 100%;
   dl {
     width: 100%;
@@ -14,16 +14,6 @@
       color: #cf0;
       font-family: Inter400;
       font-size: 16px;
-    }
-    .confirm-modal__gas-fee {
-      color: var(--Dark-Color-06, var(--Color-06, #888));
-      text-align: center;
-      font-family: Inter;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      letter-spacing: 0.36px;
     }
   }
   .confirm-modal__btns {
@@ -39,21 +29,7 @@
           border: 1px solid #383838;
         }
       }
-      &.disabled {
-        background-color: #000;
-        color: #565656;
-        border: 1px solid #2c3a00;
-        pointer-events: none;
-        &::after {
-          border: none;
-        }
-        &:hover {
-          top: 0;
-          &::after {
-            top: 0;
-          }
-        }
-      }
+
       flex: 1;
       width: 100%;
       height: 38px;
