상훈 feat: NftConfirmModal에서 confirmBuyTxt 추가 및 confirm-success-modal 버튼 스타일 통합

--- a/src/components/NftConfirmSuccessModal.scss
+++ b/src/components/NftConfirmSuccessModal.scss
@@ -16,7 +16,8 @@
       font-size: 16px;
     }
   }
-  .confirm-modal__btns {
+  .confirm-modal__btns,
+  .confirm-success-modal__btns {
     width: 100%;
     display: flex;
     align-items: center;
