--- a/src/pages/music-generator.scss
+++ b/src/pages/music-generator.scss
@@ -35,6 +35,7 @@
   &__select {
     padding: 0.5rem;
     font-size: 1rem;
+    background-color: #a3cdff;
   }
 
   &__button {
@@ -56,6 +57,7 @@
     margin-top: 1rem;
     padding: 0.75rem;
     border-radius: 4px;
+
     &--preparing {
       background-color: #f0f0f0;
       color: #333;
@@ -90,5 +92,43 @@
     margin-top: 0.5rem;
     color: #c62828;
     font-weight: 600;
+  }
+
+  // --- New result styles ---
+  &__results {
+    margin: 1.5rem auto 0;
+    max-width: 480px;
+    text-align: center;
+
+    h3 {
+      font-size: 1.25rem;
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__choice {
+    margin-bottom: 1.5rem;
+
+    p {
+      margin-bottom: 0.5rem;
+      font-size: 0.95rem;
+    }
+
+    a {
+      display: inline-block;
+      margin-top: 0.25rem;
+      font-size: 0.875rem;
+      text-decoration: underline;
+      color: #2680eb;
+
+      &:hover {
+        color: darken(#2680eb, 10%);
+      }
+    }
+  }
+
+  &__audio {
+    width: 100%;
+    outline: none;
   }
 }
