--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -1,4 +1,7 @@
 .main__header {
+  .main__header--mobile-title{
+    display: none;
+  }
   .main__header__mobile-detail-btn {
     display: none;
   }
@@ -283,12 +286,57 @@
 
 @media screen and (max-width: 768px) {
   .main__header {
-    padding: 16px 16px 32px;
+    padding: 42px 16px 16px 16px;
     gap: 0;
     height: auto;
+    .main__header--mobile-title{
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      display: block;
+      width: calc(100% - 32px);
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      span{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
+        color:#aaa;
+        font-family: Inter400;
+        font-size: 12px;
+        font-style: normal;
+        line-height: 100%;
+        img{
+          width: 16px;
+          height: 16px;
+          overflow: hidden;
+          border-radius: 100%;
+        }
+      }
+    }
+    .rhap_main{
+      flex-direction: column;
+      .rhap_button-clear.rhap_skip-button svg{
+        font-size: 20px;
+        display: none;
+      }
+      .rhap_button-clear.rhap_play-pause-button svg{
+        font-size: 34px;
+      }
+      .rhap_button-clear.rhap_play-pause-button{
+        top: 10px;
+        left: -28px;
+      }
+    }
+    .rhap_container{
+      padding: 0;
+    }
     .rhap_stacked .rhap_controls-section {
-      margin-top: 32px;
-      margin-bottom: 16px;
+      // margin-top: 32px;
+      // margin-bottom: 16px;
     }
     .main__header__mobile-detail-btn {
       // display: block !important;
@@ -304,17 +352,18 @@
       margin-left: auto;
     } //main__header__cover-info__btn--END--
     .main__header__album-cover {
-      position: static;
+      // position: static;
       &::after {
-        display: none;
+        // display: none;
       }
       .main__header__album-cover__img {
-        display: none;
+        // display: none;
       }
       .main__header__title {
-        top: 16px;
+        top: 0px;
         left: 16px;
         width: calc(100% - 32px);
+        display: none;
       }
     }
     .main__header__cover-info {
@@ -325,6 +374,7 @@
       align-items: center;
       padding-right: 32px;
       width: 100%;
+      display: none;
     }
     .rhap_main .rhap_time {
       width: 58px;
@@ -336,12 +386,12 @@
       }
     }
     .rhap_container {
-      margin-top: 60px;
+      // margin-top: 60px;
     }
     .rhap_volume-controls {
       width: 100px;
       right: 20px;
-      bottom: 16px;
+      bottom: 28px;
     }
   }
 }
