--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -418,7 +418,8 @@
 
 @media screen and (max-width: 768px) {
   .main {
-    padding-top: 226px;
+    // padding-top: 226px;
+    padding-top: 134px;
 
     .album__content-list{
       .album__content-list__tab{
