--- a/src/styles/UploadSequence.scss
+++ b/src/styles/UploadSequence.scss
@@ -33,7 +33,7 @@
     border-radius: 6px;
     font-size: 1rem;
     transition: border-color 0.2s;
-
+    color: black;
     &:focus {
       outline: none;
       border-color: #007bff;
@@ -69,6 +69,9 @@
       height: 100%;
       opacity: 0;
       cursor: pointer;
+    }
+    span {
+      color: black;
     }
   }
 
