영진 수정 - 모달 버튼 로딩 추가 전체 디세이블드 추가

--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,18 @@ button {
   cursor: pointer;
   background: transparent;
   color: #fff;
+  &:disabled,
+  &.disabled{
+    background-color: #000 !important;
+    color: #565656 !important;
+    border: 1px solid #2c3a00 !important;
+    pointer-events: none !important;
+    &::after{
+      width: 100%;
+      border: none !important;
+      border-bottom: 1px solid #2c3a00 !important;
+    }
+  }
 }
 
 
