--- a/src/components/mypage/albums/AlbumsDetail.scss
+++ b/src/components/mypage/albums/AlbumsDetail.scss
@@ -78,6 +78,7 @@
               font-size: 12px;
               font-style: normal;
               min-width: 112px;
+              cursor: pointer;
             } //my-album-details__box__header__right__box__title__edit-btn--END--
           } //my-album-details__box__header__right__box__title--END--
           .my-album-details__box__header__right__box__list {
