--- a/src/components/NftConfirmModal.scss
+++ b/src/components/NftConfirmModal.scss
@@ -6,7 +6,7 @@
   padding: 0;
   width: 18px;
   height: 18px;
-  border: 1px solid #383838;
+  border: 1px solid #a3a3a3;
   border-radius: 2px;
   cursor: pointer;
   position: relative;
