--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -48,6 +48,55 @@
       background-position: center;
       background-size: cover;
     } //album__content-list__list__item__left__img--END--
+    .album__content-list__list__item__songs_grade {
+      display: flex;
+      gap: 4px;
+
+      &.New {
+        border-color: #ffffff;
+      }
+      &.Indie {
+        border-color: #b89334;
+      }
+      &.Rising {
+        border-color: #00d5a7;
+      }
+      &.Top {
+        border-color: #df454d;
+      }
+      &.Legend {
+        border-color: #5a9bf6;
+      }
+
+      content: '';
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      // width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      background-color: #222;
+      border-radius: 4px;
+      padding: 2px;
+      border: 1px solid #383838;
+      img {
+        height: 90%;
+        object-fit: cover;
+      }
+      .album__content-list__list__item__songs_grade--section {
+        height: calc(100% - 2px);
+        width: 1px;
+        background-color: #565656;
+      }
+      .album__content-list__list__item__songs_grade--nfts {
+        font-size: 8px;
+        color: #fff;
+        font-family: Orbitron400;
+      }
+    }
     .time {
       position: absolute;
       bottom: 16px;
@@ -71,132 +120,123 @@
     }
   } //album__content-list__list__item__left--END--
 
-    .album__content-list__list__item__right {
+  .album__content-list__list__item__right {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    // padding: 8px 0;
+    flex: 1;
+    .album__content-list__list__item__right__title {
+      color: #f1f1f1;
+      font-family: Inter400;
+      font-size: 14px;
+      font-style: normal;
+      text-align: left;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      word-break: break-word;
+      min-height: 34px;
+      width: 134px;
+    } //album__content-list__list__item__right__title--END--
+    .album__content-list__list__item__right__love-play {
       display: flex;
-      flex-direction: column;
+      align-items: start;
       gap: 8px;
-      // padding: 8px 0;
-      flex: 1;
-      .album__content-list__list__item__right__title {
-        color: #f1f1f1;
+      flex-direction: column;
+      img {
+        width: 14px;
+        height: 14px;
+      }
+      p {
+        &.play {
+          padding-left: 2px;
+        }
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        color: var(--Text-music-sub, #aaa);
         font-family: Inter400;
-        font-size: 14px;
+        font-size: 12px;
         font-style: normal;
-        text-align: left;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        word-break: break-word;
-        min-height: 34px;
-        width: 134px;
-      } //album__content-list__list__item__right__title--END--
-      .album__content-list__list__item__right__love-play {
-        display: flex;
-        align-items: start;
-        gap: 8px;
-        flex-direction: column;
-        img {
-          width: 14px;
-          height: 14px;
-        }
-        p {
-          &.play{
-            padding-left: 2px;
-          }
-          display: flex;
-          align-items: center;
-          gap: 4px;
-          color: var(--Text-music-sub, #aaa);
-          font-family: Inter400;
-          font-size: 12px;
-          font-style: normal;
-          line-height: 100%; /* 12px */
-          &:nth-child(2) {
-            img {
-              width: 16px;
-              height: 16px;
-            }
-          }
-        }
-      } //album__content-list__list__item__right__love-play--END--
-      .album__content-list__list__item__right__user {
-        display: flex;
-        align-items: start;
-        justify-content: space-between;
-        flex-direction: column;
-        gap: 18px;
-        .album__content-list__list__item__right__user__info {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 8px;
-          color: var(--Text-music-title, #f1f1f1);
-          font-family: Inter400;
-          font-size: 12px;
-          font-style: normal;
-          line-height: 100%; /* 12px */
-          letter-spacing: 0.36px;
+        line-height: 100%; /* 12px */
+        &:nth-child(2) {
           img {
-            width: 24px;
-            height: 24px;
-            object-fit: cover;
-            border-radius: 100%;
-            overflow: hidden;
+            width: 16px;
+            height: 16px;
           }
-        } //album__content-list__list__item__right__user__info--END--
-        .album__content-list__list__item__right__user__btn {
-          width: 100%;
+        }
+      }
+    } //album__content-list__list__item__right__love-play--END--
+    .album__content-list__list__item__right__user {
+      display: flex;
+      align-items: start;
+      justify-content: space-between;
+      flex-direction: column;
+      gap: 18px;
+      .album__content-list__list__item__right__user__info {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        color: var(--Text-music-title, #f1f1f1);
+        font-family: Inter400;
+        font-size: 12px;
+        font-style: normal;
+        line-height: 100%; /* 12px */
+        letter-spacing: 0.36px;
+        img {
+          width: 24px;
           height: 24px;
-          background: #cf0;
-          position: relative;
-          top: 0;
+          object-fit: cover;
+          border-radius: 100%;
+          overflow: hidden;
+        }
+      } //album__content-list__list__item__right__user__info--END--
+      .album__content-list__list__item__right__user__btn {
+        width: 100%;
+        height: 24px;
+        background: #cf0;
+        position: relative;
+        top: 0;
+        transition: 0.2s;
+        color: var(--Text-dark-title, #1a1a1a);
+        font-family: Orbitron600;
+        font-size: 12px;
+        font-style: normal;
+        line-height: normal;
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 4px;
+          width: calc(100% - 2px);
           transition: 0.2s;
-          color: var(--Text-dark-title, #1a1a1a);
-          font-family: Orbitron600;
-          font-size: 12px;
-          font-style: normal;
-          line-height: normal;
           border-radius: 8px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
+          height: 23px;
+          border: 1px solid #cf0;
+        }
+        &:hover {
+          top: 4px;
           &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 4px;
-            width: calc(100% - 2px);
-            transition: 0.2s;
-            border-radius: 8px;
-            height: 23px;
-            border: 1px solid #cf0;
+            top: 0;
           }
-          &:hover {
-            top: 4px;
-            &::before {
-              top: 0;
-            }
-          }
-          // width: 24px;
-          // height: 24px;
-          // font-size: 0;
-          // background: url('../assets/images/album/more-icon.svg') center no-repeat;
-          // background-size: contain;
-        } //album__content-list__list__item__right__user__btn--END--
-      } //album__content-list__list__item__right__user--END--
-    } //album__content-list__list__item__right--END-
-  } //album__content-list__list__item--END--
-
-
-
-
-
-
-
-
-
+        }
+        // width: 24px;
+        // height: 24px;
+        // font-size: 0;
+        // background: url('../assets/images/album/more-icon.svg') center no-repeat;
+        // background-size: contain;
+      } //album__content-list__list__item__right__user__btn--END--
+    } //album__content-list__list__item__right__user--END--
+  } //album__content-list__list__item__right--END-
+} //album__content-list__list__item--END--
 
 @media screen and (max-width: 980px) {
   .album__content-list__list__item {
