--- a/src/components/SongDeleteAndReleaseModal.scss
+++ b/src/components/SongDeleteAndReleaseModal.scss
@@ -10,6 +10,10 @@
     align-items: center;
     gap: 8px;
   }
+  .song-delete-and-release-modal__message--complete {
+    color: #aaa;
+    font-family: Inter400;
+  }
 
   .song-delete-and-release-modal__title {
     color: #f1f1f1;
