상훈 feat : 메뉴바 높이 자동 조절 수정 크리에이트 주석처리 버전선택에서

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -46,7 +46,7 @@
     flex-direction: column;
     gap: 10px;
     height: 100%;
-    max-height: 740px;
+    max-height: calc(100vh - 200px);
     overflow-y: scroll;
     width: calc(100% + 14px);
   }
