경세 fix : NFT 컨펌 모달 font-family 수정및 마이 페이지 NFT MarketPlace -> NFTs 로 변경

--- a/src/components/NftConfirmSuccessModal.scss
+++ b/src/components/NftConfirmSuccessModal.scss
@@ -77,6 +77,8 @@
     font-size: 16px;
     line-height: 1.5;
     word-break: keep-all;
+    font-family: Inter400;
+    color: #aaa;
   }
 
   .confirm-success-modal__btns {
