경세 fix : 앨범 곡 리스트 수정 페이지 작업 중

--- a/src/components/unit/SongPlayEditTable.scss
+++ b/src/components/unit/SongPlayEditTable.scss
@@ -52,6 +52,41 @@
   }
 }
 
+.song-play-edit-table-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.song-play-edit-table-add-delete-button {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  .button-item {
+    display: flex;
+    gap: 4px;
+    padding: 15px;
+    color: #fff;
+    font-family: Orbitron500;
+    font-size: 14px;
+    background-color: #222;
+    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+    &.add-button {
+      img {
+        transform: rotate(-90deg);
+      }
+    }
+    &.delete-button {
+      img {
+        transform: rotate(90deg);
+      }
+    }
+  }
+}
+
 .song-play-edit-table {
   flex: 1;
   .song-play-edit-table__selected {
