--- a/src/components/mypage/songs/AlbumsEdit.scss
+++ b/src/components/mypage/songs/AlbumsEdit.scss
@@ -1,4 +1,15 @@
 .albums-edit {
+  .albums-edit__title {
+    color: #cf0;
+    font-family: Orbitron600;
+    font-size: 30px;
+  }
+  .albums-edit__album-name {
+    color: #f1f1f1;
+    font-family: Orbitron500;
+    font-size: 20px;
+  }
+
   .albums-edit__edit-button {
     margin-left: auto;
     border-radius: 12px;
@@ -28,6 +39,48 @@
       border-radius: 12px;
       border: 1px solid #cf0;
       transition: 0.2s all;
+    }
+  }
+
+  .albums-edit__category {
+    display: flex;
+    gap: 8px;
+  }
+
+  .albums-edit__category-btn {
+    border-radius: 10px 2px 10px 10px;
+    border: 1px solid var(--Color-06, #888);
+    background: var(--Color-03, #222);
+    height: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 12px;
+    color: var(--Text-music-sub, #aaa);
+    font-family: Orbitron500;
+    font-size: 14px;
+    font-style: normal;
+    transition: 0.3s;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      right: 2px;
+      top: 2px;
+      width: 4px;
+      height: 4px;
+      background: #888;
+      border-radius: 100%;
+    }
+    &.active {
+      background: #cf0;
+      border: 1px solid #cf0;
+      color: var(--Text-dark-title, #1a1a1a);
+      font-family: Orbitron500;
+      font-size: 14px;
+      &::after {
+        background: #000;
+      }
     }
   }
 }
