--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -121,6 +121,7 @@
     // min-height: 220px;
     transition: 0.3s;
     margin-top: 50px;
+    margin-bottom: -60px;
     .main__stats__title {
       display: flex;
       align-items: center;
