--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -22,27 +22,42 @@
     padding: 16px;
     border-radius: 12px;
     border: 1px solid #222;
-    .album-detail__song-detail__title {
-      color: #cf0;
-      font-family: Orbitron400;
-      font-size: 24px;
-      font-style: normal;
-      line-height: normal;
-      letter-spacing: 0.72px;
-      margin-bottom: 16px;
-      position: relative;
-      display: inline-block;
-      &::after {
-        content: '';
-        position: absolute;
-        top: -2px;
-        left: -4px;
-        width: 4px;
-        height: 4px;
-        border-radius: 100%;
-        background: #cf0;
+    .album-detail__song-detail__title-box {
+      display: flex;
+      align-items: first baseline;
+      justify-content: space-between;
+      .album-detail__song-detail__title {
+        color: #cf0;
+        font-family: Orbitron400;
+        font-size: 24px;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 0.72px;
+        margin-bottom: 16px;
+        position: relative;
+        display: inline-block;
+        &::after {
+          content: '';
+          position: absolute;
+          top: -2px;
+          left: -4px;
+          width: 4px;
+          height: 4px;
+          border-radius: 100%;
+          background: #cf0;
+        }
+      } //album-detail__song-detail__title--END--
+      .album-detail__song-detail__right__version {
+        color: #f1f1f1;
+        font-family: Orbitron500;
+        font-size: 12px;
+        font-style: normal;
+        line-height: normal;
+        border: 1px solid #00ffb3;
+        border-radius: 12px;
+        padding: 8px 12px;
       }
-    } //album-detail__song-detail__title--END--
+    }
     .album-detail__song-detail__bot {
       display: flex;
       gap: 16px;
@@ -242,16 +257,6 @@
             line-height: 100%; /* 20px */
             margin-bottom: 24px;
           } //album-detail__song-detail__right__title--END--
-          .album-detail__song-detail__right__version {
-            color: #f1f1f1;
-            font-family: Orbitron400;
-            font-size: 12px;
-            font-style: normal;
-            line-height: normal;
-            border: 1px solid #00ffb3;
-            border-radius: 12px;
-            padding: 4px 12px;
-          } //album-detail__song-detail__right__version--END--
         }
         .album-detail__song-detail__right__type {
           display: flex;
