--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -14,7 +14,7 @@
     max-width: 400px;
     width: 100%;
     background-color: #222;
-    border-radius: 4px;
+    border-radius: 16px;
     border: 1px solid var(--Color-05, #222);
     background: var(--Color-02, #1a1a1a);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
@@ -22,10 +22,15 @@
       padding: 17px;
       text-align: center;
       position: relative;
-      border-bottom: 1px solid var(--Color-04, #222);
+    }
+    .modal-title {
+      color: #f1f1f1;
+      font-size: 24px;
+      font-family: Orbitron600;
     }
     .modal-close {
-      position: absolute;
+      // position: absolute;
+      margin-left: auto;
       right: 17px;
       top: 17px;
       cursor: pointer;
