--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -181,6 +181,87 @@
   }
 }
 .create__get-started--version {
+  &.active{
+    .create__get-started--version__select__title{
+      border: 1px solid #cf0 !important;
+      &::after{
+        transform: translate(0,-50%) rotate(180deg) !important;
+      }
+    }
+    .create__get-started--version__select__list{
+      height: 154px !important;
+      opacity: 1 !important;
+      border: 1px solid #678300 !important;
+    }
+  }
+  .create__get-started--version__title{
+    color: var(--Text-music-title, #F1F1F1);
+    font-family: Orbitron700;
+    font-size: 16px;
+    margin-bottom: 16px;
+  }//create__get-started--version__title--END--
+  .create__get-started--version__select{
+    position: relative;
+    width: 100%;
+    .create__get-started--version__select__title{
+      border-radius: 12px;
+      border: 1px solid #383838;
+      background: #0B0B0C;
+      height: 54px;
+      color: var(--Text-music-title, #F1F1F1);
+      font-family: Inter400;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      padding: 0 16px;
+      cursor: pointer;
+      transition: 0.3s;
+      &::after{
+        content: '';
+        display: block;
+        position: absolute;
+        right: 16px;
+        top:50%;
+        transform: translate(0,-50%);
+        width: 20px;
+        height: 20px;
+        background: url('../../assets/images/arrow_down.svg') center no-repeat;
+        background-size: cover;
+        transition: 0.3s;
+      }
+    }
+    .create__get-started--version__select__list{
+      width: 100%;
+      background: #0B0B0C;
+      border-radius: 12px;
+      border: 1px solid transparent;
+      transition: 0.3s;
+      overflow: hidden;
+      position: absolute;
+      top: 58px;
+      left: 0;
+      height: 0;
+      opacity: 0;
+      li{
+        padding: 8px 16px;
+        transition: 0.3s;
+        cursor: pointer;
+        &:hover{
+          background: #222;
+        }
+        p,span{
+          color: #FFF;
+          font-family: Inter400;
+          font-size: 14px;
+        }
+        span{
+          margin-top: 8px;
+        }
+      }
+    }//create__get-started--version__select__list--END--
+  }//create__get-started--version__select--END--
+
+
   display: flex;
   flex-direction: column;
   margin-bottom: 16px;
@@ -285,6 +366,16 @@
 }
 
 @media screen and (max-width: 768px) {
+  .create__get-started--version{
+    &.active{
+      .create__get-started--version__select{
+        .create__get-started--version__select__list{
+          height: auto !important;
+        }
+      }
+    }
+
+  }
   .create__get-started {
     padding: 32px 32px 64px;
     margin-top: 32px;
