--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -121,7 +121,7 @@
       position: relative;
       width: 100%;
       height: 100px;
-      margin-top: 16px;
+      margin: 32px 0;
       background: url('../assets/images/intro/intro__nft-bg.png') center no-repeat;
       background-size: cover;
       border-radius: 8px;
@@ -131,7 +131,7 @@
           right: 32px;
         }
       }
-      .main__nft-market__btn-text {
+      .main__nft-market__link-text {
         position: absolute;
         right: 16px;
         top: 50%;
@@ -245,7 +245,6 @@
       font-size: 24px;
       font-style: normal;
       line-height: normal;
-      margin: 32px 0 0;
       position: relative;
       display: inline-block;
       &::after {
@@ -627,6 +626,17 @@
       }
       .album__content-list__list {
         grid-template-columns: repeat(1, 1fr);
+      }
+    }
+
+    .main__nft-market {
+      .main__nft-market__link {
+        .main__nft-market__link-text {
+          &::before {
+            width: 300px;
+            background-size: contain;
+          }
+        }
       }
     }
   }
