--- a/src/components/unit/ContentWrap.scss
+++ b/src/components/unit/ContentWrap.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     gap: 24px;
     &.none-padding{
-        padding:0;
+        padding:16px 0;
     }
 
   .unit-component-content-wrap__title {
