--- a/src/styles/NftItemDetail.scss
+++ b/src/styles/NftItemDetail.scss
@@ -421,7 +421,23 @@
             font-size: 8px;
           }
         }
-
+        .nft-item-detail__song-detail__left__info__btn-box {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          .nft-item-detail__song-detail__left__info__txid-btn {
+            display: flex;
+            width: 70px;
+            padding: 4px 6px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 8px;
+            align-self: stretch;
+            border-radius: 6px;
+            background: var(--Color-03, #222);
+          }
+        }
         .nft-item-detail__song-detail__left__info__number {
           display: flex;
           align-items: center;
